<resources>
	<!-- app stuff -->
	<string name="app_name">SFTP Documents Provider</string>

	<string name="authority">lu.knaff.alain.saf_sftp.documents</string>
	<string name="old_authority">lu.knaff.alain.sftp.documents</string>

	<!-- other items that are relevant globally -->
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">OK</string>

	<!-- main page -->
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="file_browser">Browse files</string>

	<!-- file browser -->
	<string name="no_documentsui">Documentsui not found</string>

	<!-- account (filesystem root) editing dialog -->
	<string name="displayName">Display name</string>
	<string name="displayNameExample">My cool server</string>
	<string name="host">Host</string>
	<string name="hostExample">myserver.home.com</string>
	<string name="port">Port</string>
	<string name="portExample">22</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="start_directory">Start directory</string>
	<string name="proxy">Proxy</string>
	<string name="socks_proxy_hint">host:port</string>
	<string name="hide_from_list">Hide from fs root list</string>
	<string name="check_host_key">Check Host Key</string>
	<string name="add_account">Add account</string>
	<string name="update_account">Update account</string>
	<string name="nothing_changed">Nothing changed</string>

        <string name="test_connect_err">Error during test connection</string>

	<!-- key management -->
	<string name="generate_key">Generate key</string>
	<string name="regenerate_key">Regenerate key</string>
	<string name="share_public_key">Share public key</string>
	<string name="pubkey_subject">SFTP client public ssh key</string>
	<string name="keygen_confirm">This will overwrite the existing key pair and invalidate any user certificate. Are you sure?</string>

	<string name="import_certificate">Import user certificate</string>

	<string-array name="proxy_type_array">
          <item>None</item>
          <item>SOCKS</item>
          <item>SSH Jump Host</item>
	</string-array>
</resources>
